added get time api
